feat: support dark mode in admin layout and not-found page

--- a/src/layouts/admin/navbar/LinksGroup.module.css
+++ b/src/layouts/admin/navbar/LinksGroup.module.css
@@ -5,6 +5,8 @@
     padding: var(--mantine-spacing-xs) var(--mantine-spacing-md);
     color: light-dark(var(--mantine-color-black), var(--mantine-color-dark-0));
     font-size: var(--mantine-font-size-sm);
+    border-radius: var(--mantine-radius-md);
+    margin-bottom: 2px;
 
     &:hover {
         background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-7));
@@ -21,7 +23,8 @@
     margin-left: rem(30px);
     font-size: var(--mantine-font-size-sm);
     color: light-dark(var(--mantine-color-gray-7), var(--mantine-color-dark-0));
-    border-left: 1px solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
+    border-radius: var(--mantine-radius-md);
+    margin-bottom: 2px;
 
     &:hover {
         background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-7));
