--- a/src/components/user/style.module.scss
+++ b/src/components/user/style.module.scss
@@ -4,6 +4,7 @@
     padding: 24px;
     border-radius: 12px;
     border: 1px solid #cccccc;
+    align-items: flex-start;
 }
 
 .left {
@@ -14,8 +15,8 @@
 .right {
     flex: 1;
     position: relative;
-    overflow-y: auto;
-    height: calc(100vh - 80px);
+    overflow-y: visible;
+    height: auto;
 }
 
 .editBtn {
